@@ -7,6 +7,9 @@
   definitions ending with two question marks instead of
   one. [bug=984258]
 
+* Upon document generation, CData objects are no longer run through
+  the formatter. [bug=988905]
+
 * The test suite now passes when lxml is not installed, whether or not
   html5lib is installed. [bug=987004]
 
